--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,36 +1,19 @@
 [project]
 name = "randomloraloader"
-description = "A ComfyUI custom node for randomly selecting and applying LoRAs from multiple folders with support for trigger words, sample prompts, and strength randomization."
-version = "1.0.0"
-license = {file = "LICENSE"} 
-# classifiers = [
-#     # For OS-independent nodes (works on all operating systems)
-#     "Operating System :: OS Independent",
-#
-#     # OR for OS-specific nodes, specify the supported systems:
-#     "Operating System :: Microsoft :: Windows",  # Windows specific
-#     "Operating System :: POSIX :: Linux",  # Linux specific
-#     "Operating System :: MacOS",  # macOS specific
-#
-#     # GPU Accelerator support. Pick the ones that are supported by your extension.
-#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
-#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
-#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
-#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
-#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
-# ]
+description = "Randomly select and apply LoRAs with keyword filtering, preview images, and multiple folder support for ComfyUI"
+version = "1.1.0"
+license = {file = "LICENSE"}
 
+classifiers = [
+    "Operating System :: OS Independent",
+    "Environment :: GPU :: NVIDIA CUDA",
+    "Environment :: GPU :: AMD ROCm",
+]
 
 [project.urls]
 Repository = "https://github.com/shin131002/RandomLoRALoader"
-#  Used by Comfy Registry https://registry.comfy.org
-Documentation = "https://github.com/shin131002/RandomLoRALoader/wiki"
-"Bug Tracker" = "https://github.com/shin131002/RandomLoRALoader/issues"
 
 [tool.comfy]
 PublisherId = ""
 DisplayName = "RandomLoRALoader"
 Icon = ""
-includes = [] 
-# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility
-
